--- a/angular/tsconfig.json
+++ b/angular/tsconfig.json
@@ -13,6 +13,8 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
@@ -24,6 +26,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "fullTemplateTypeCheck":true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
